# hello-api

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  auth.py  config.py  david-feature.txt  documentotxtCLI.txt  example.txt  main.py  models.py  pyproject.toml  repository.py  testeandre.txt
.kiro/hooks/: lint-on-save.json  start-api.json  stop-api.json
.kiro/specs/database-integration/: requirements.md
.kiro/specs/testing-suite/: requirements.md
.kiro/steering/: api-development-guide.md  docker-guide.md  python-fastapi-standards.md
routers/: alunos_router.py  auth_router.py
